--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <!-- Nav Bar -->
 
       <nav class="navbar navbar-expand-lg navbar-light">
-        <img src="images/loogoo-removebg.png" class="navbar-brand bubble" height="10%" width="10%">
+        <img src="loogoo-removebg.png" class="navbar-brand bubble" height="10%" width="10%">
         <p class="ttt">TravelMania</p>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -68,7 +68,7 @@
                 class="user fa-solid fa-user-gear"></i>Admin</button></a>
         </div>
         <div class="col-lg-6 t-img-box" style="position: relative;" data-aos="zoom-in-right" data-aos-duration="1500">
-          <img class="title-img" src="images/png-train-transparent-train-images-pluspng-25.png" alt="Train-dummy">
+          <img class="title-img" src="png-train-transparent-train-images-pluspng-25.png" alt="Train-dummy">
         </div>
       </div>
     </div>
@@ -115,34 +115,34 @@
         <div class="carousel-item active">
           <p class="car-para">I am leading a team of five members, developing a rapid, effective and smart Rfid
             ticketing system.I am part of the project hardware team.My area of interest is Embedded and IOT system.</p>
-          <img class="t-img1" src="images/gourav.png" alt="dog-profile">
+          <img class="t-img1" src="gourav.png" alt="dog-profile">
           <em>Gourav Banerjee, Team Lead, A-28, BE ELEX.</em>
         </div>
         <div class="carousel-item">
           <p class="car-para">I am part of the Hardware development team, for the project. worked with the team to make
             this fabulas project.</p>
-          <img class="t-img2" src="images/shailendra.jpeg" alt="dog-profile">
+          <img class="t-img2" src="shailendra.jpeg" alt="dog-profile">
           <em>Shailendra Maurya, A-33, BE ELEX</em>
 
         </div>
         <div class="carousel-item">
           <p class="car-para">Embedded systems has always been my area of interest, and this project gave me the
             opportunity to grow and excel my skills.</p>
-          <img class="t-img3" src="images/sarvesh.jpeg" alt="dog-profile">
+          <img class="t-img3" src="sarvesh.jpeg" alt="dog-profile">
           <em>Sarvesh Pednekar, A-29, BE-ELEX</em>
 
         </div>
         <div class="carousel-item">
           <p class="car-para"> I am part of the software team. To make the proposed system dynamic, versatile and
             available for everyone and for it to work as planned , we needed to work on software development.</p>
-          <img class="t-img4" src="images/yashas.jpeg" alt="dog-profile">
+          <img class="t-img4" src="yashas.jpeg" alt="dog-profile">
           <em>Yashas More, A-31, BE-ELEX</em>
 
         </div>
         <div class="carousel-item">
           <p class="car-para">I am part of the software team for the project. Jointly Developing the required sections
             with the team and achieving great success together.</p>
-          <img class="t-img5" src="images/shivam.png" alt="dog-profile">
+          <img class="t-img5" src="shivam.png" alt="dog-profile">
           <em>Shivam Singh, A-30, BE-ELEX</em>
 
         </div>
@@ -162,10 +162,7 @@
 
 
 
-    <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-    <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-    <em>Beverly, Illinois</em> -->
-
+    
   </section>
 
 
